--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
         android:theme="@style/Theme.StockOpname"
         tools:targetApi="31">
         <activity
+            android:name=".ui.item.ItemActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
             android:name=".ui.printlabel.PrintlabelActivity"
             android:exported="false"
             android:screenOrientation="portrait"
